--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,17 +4,19 @@ title: Gerry Minor's Fine Art | Gallery
 css: gallery/gallery.css
 js: gallery/gallery.js
 ---
-{% for image_panel in site.image_panels %}
-	<div class="panel">
-		<div class="title">
-			<p>{{ image_panel.title }}</p>
+<div class="grid-container">
+	{% for image_panel in site.image_panels %}
+		<div class="panel">
+			<div class="title">
+				<p>{{ image_panel.title }}</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('gallery/pictures/{{ image_panel.picture }}', '{{ image_panel.title }}')">
+				<img src="gallery/thumbnails{{ image_panel.thumbnail }}" alt="{{ image_panel.alt }}" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>{{ image_panel.medium }}</p>
+				<p>{{ image_panel.width }} &times; {{ image_panel.height }}</p>
+			</div>
 		</div>
-		<a title="Click to view" onclick="openViewer('gallery/pictures/{{ image_panel.picture }}', '{{ image_panel.title }}')">
-			<img src="resources/thumbnails/{{ image_panel.thumbnail }}" alt="{{ image_panel.alt }}" width="230" height="230">
-		</a>
-		<div class="description">
-			<p>{{ image_panel.medium }}</p>
-			<p>{{ image_panel.width }} &times; {{ image_panel.height }}</p>
-		</div>
-	</div>
-{% endfor %}
+	{% endfor %}
+</div>
