--- a/gallery/index.html
+++ b/gallery/index.html
@@ -11,7 +11,7 @@ js: gallery/gallery.js
 				<p>{{ image_panel.title }}</p>
 			</div>
 			<a title="Click to view" onclick="openViewer('gallery/pictures/{{ image_panel.picture }}', '{{ image_panel.title }}')">
-				<img src="gallery/thumbnails{{ image_panel.thumbnail }}" alt="{{ image_panel.alt }}" width="230" height="230">
+				<img src="gallery/thumbnails/{{ image_panel.thumbnail }}" alt="{{ image_panel.alt }}" width="230" height="230">
 			</a>
 			<div class="description">
 				<p>{{ image_panel.medium }}</p>
