viewer img path

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -21,7 +21,7 @@ js: gallery/gallery.js
 			<div class="title">
 				<p>{{ image_panel.title }}</p>
 			</div>
-			<a title="Click to view" onclick="openViewer('gallery/pictures/{{ image_panel.picture }}', '{{ image_panel.title }}')">
+			<a title="Click to view" onclick="openViewer('pictures/{{ image_panel.picture }}', '{{ image_panel.title }}')">
 				<img src="thumbnails/{{ image_panel.thumbnail }}" alt="{{ image_panel.alt }}" width="230" height="230">
 			</a>
 			<div class="description">
