--- a/gallery/index.html
+++ b/gallery/index.html
@@ -29,6 +29,7 @@ js: gallery/gallery.js
 				<img src="thumbnails/{{ image_panel.thumbnail }}" alt="{{ image_panel.alt }}" width="230" height="230">
 			</a>
 			<div class="description">
+				<a onclick="openViewer('pictures/{{ image_panel.picture }}', '{{ image_panel.viewer_title }}')">View</a>
 				<p>{{ image_panel.medium }}</p>
 				<p>{{ image_panel.width }} &times; {{ image_panel.height }}</p>
 			</div>
