--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ permalink: /404.html
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 	</head>
 	<body>
-		<h1>Nice job! You got lost.</h1>
-		<p><a href="/gerry-minors-fine-art">Click here to get unlost</a></p>
+		<h1 class="webname">Uh oh... This webpage doesn't exist</h1>
+		<a id="lostLink" href="/gerry-minors-fine-art">Click here to get back to the homepage</a>
 	</body>
 </html>
