--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@ permalink: /404.html
 <html>
 	<head>
 		<title>404</title>
+		<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script|Open+Sans:800" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 	</head>
