404 title and link

--- a/404.html
+++ b/404.html
@@ -8,9 +8,10 @@ permalink: /404.html
 		<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script|Open+Sans:800" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<h1 class="webname">Uh oh... This webpage doesn't exist</h1>
-		<a id="lostLink" href="/gerry-minors-fine-art">Click here to get back to the homepage</a>
+		<h1 id="lostTitle">Uh oh... You're lost</h1>
+		<a id="lostLink" href="/gerry-minors-fine-art">Click here to get back home</a>
 	</body>
 </html>
