--- a/404.html
+++ b/404.html
@@ -12,6 +12,8 @@ permalink: /404.html
 	</head>
 	<body>
 		<h1 id="lostTitle">Uh oh... You're lost</h1>
-		<a id="lostLink" href="/gerry-minors-fine-art">Click here to get back home</a>
+		<div style="margin: 60px auto; width: 70%;">
+			<a id="lostLink" href="/gerry-minors-fine-art">Click here to get back home</a>
+		</div>
 	</body>
 </html>
