Gerry photo style

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ css: about/about.css
 ---
 <div class="panel">
 	<h1>About the Artist: Gerry Minor</h1>
-	<img id="gerryminor" src="gerryminor.jpg">
+	<img src="gerryminor.jpg">
 	<div class="bioSection">
 		<h3>Early Life</h3><br>
 		<p>On August 12, 1929 Geraldine Mae Cassem was born in the farming community of Mitchell, South Dakota.  While this was a joyous occasion for her parents, Randall and Maria Cassem, the troubling times of the Great Depression were soon to follow.  Further complicating their lives, the Great Dust Bowl made farming impossible, and her father struggled to provide financially.  When she was five years old, Geraldine and her family emigrated to the small community of Whittier, California to live with her maternal grandparents.</p>
