Changes link to my website to linkedin

--- a/about/index.html
+++ b/about/index.html
@@ -21,5 +21,5 @@ css: about/about.css
 </div>
 
 <div class="panel">
-	<p style="text-align: center">This website was created by <a href="http://www.aaronbuckles.com" target="_blank">Aaron Buckles</a></p>
+	<p style="text-align: center">This website was created by <a href="https://www.linkedin.com/in/abuck351/" target="_blank">Aaron Buckles</a></p>
 </div>
